dropdown no longer full width on small screen

--- a/main.css
+++ b/main.css
@@ -85,10 +85,6 @@ nav ul li {
         height: 56px;
         padding: 15px 0 0 0;
     }
-    .dropdown-content {
-        min-width: 100%;
-        left: 0 !important;
-    }
     .brand-logo {
         margin-left: 8px;
     }
